# sqlfmt

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-27-sqlfmt-design.md  2026-02-27-sqlfmt-implementation.md  2026-04-25-remove-clap-design.md  2026-04-25-remove-clap-implementation.md
scripts/: install.sh  release.sh  uninstall.sh
src/: formatter.rs  main.rs  tokenizer.rs  update.rs
tests/: beautify_tests.rs  cli_tests.rs  colorize_tests.rs  minify_tests.rs  tokenizer_tests.rs
