[package]
name = "sqlfmt"
version = "0.3.0"
edition = "2021"
description = "A fast SQL formatter and minifier"
license = "MIT"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
flate2 = "1"
tar = "0.4"
