[package]
name = "rf-sqlfmt"
version = "0.5.2"
edition = "2021"
description = "A fast SQL formatter and minifier"
license = "MIT"
repository = "https://github.com/hwhang0917/sqlfmt"
homepage = "https://github.com/hwhang0917/sqlfmt"
readme = "README.md"
keywords = ["sql", "formatter", "cli", "pretty-print", "minifier"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[lib]
name = "sqlfmt"
path = "src/lib.rs"

[[bin]]
name = "sqlfmt"
path = "src/main.rs"

[dependencies]
